# Axis

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTINUITY_ROADMAP.md  Cargo.toml  REACTIVITY_BACKLOG.md  README.md  SETTINGS_APP_DESIGN.md  flake.nix  release-please-config.json  test_scroll.rs
backup/axis-shell/: Cargo.toml
backup/axis-shell/src/: app_context.rs
backup/axis-shell/src/services/: mod.rs  niri.rs
backup/axis-shell/src/services/notifications/: mod.rs
backup/axis-shell/src/shell/: dbus.rs  mod.rs
backup/axis-shell/src/widgets/: animations.rs  osd.rs
backup/axis-shell/src/widgets/bar/: launcher.rs  mod.rs  tray.rs
backup/axis-shell/src/widgets/base/: mod.rs
backup/axis-shell/src/widgets/calendar_popup/: calendar_grid.rs  calendar_section.rs  mod.rs  task_section.rs
backup/axis-shell/src/widgets/components/: blurred_picture.rs  icon_slider.rs  mod.rs  revealer_handle.rs  swipe_dismiss.rs  toggle_tile.rs
backup/axis-shell/src/widgets/icons/: mod.rs
backup/axis-shell/src/widgets/lock_screen/: mod.rs
backup/axis-shell/src/widgets/quick_settings/: audio_page.rs  bluetooth_pair_dialog.rs  continuity_page.rs  continuity_pair_dialog.rs  kdeconnect_page.rs  main_page.rs
crates/axis-application/: Cargo.toml
crates/axis-application/src/use_cases/: mod.rs  popups.rs
crates/axis-application/src/use_cases/agenda/: create_task.rs  delete_task.rs  mod.rs  sync.rs  sync_events.rs  sync_tasks.rs  toggle_task.rs
crates/axis-application/src/use_cases/airplane/: get_status.rs  mod.rs  set_enabled.rs
crates/axis-application/src/use_cases/appearance/: get_status.rs  mod.rs  set_accent.rs  set_font.rs  set_scheme.rs  set_wallpaper.rs  subscribe.rs
crates/axis-application/src/use_cases/audio/: get_status.rs  mod.rs  set_default_sink.rs  set_default_source.rs  set_muted.rs  set_sink_input_volume.rs  set_volume.rs  subscribe.rs
crates/axis-application/src/use_cases/bluetooth/: connect.rs  disconnect.rs  get_devices.rs  get_status.rs  mod.rs  pair_accept.rs  pair_reject.rs  set_powered.rs  start_scan.rs  stop_scan.rs  subscribe.rs  unpair.rs
crates/axis-application/src/use_cases/brightness/: get_status.rs  mod.rs  set.rs  subscribe.rs
crates/axis-application/src/use_cases/calendar/: get_events.rs  mod.rs
crates/axis-application/src/use_cases/clock/: get_time.rs  mod.rs  subscribe.rs
crates/axis-application/src/use_cases/cloud/: authenticate.rs  get_status.rs  mod.rs  subscribe.rs  sync_agenda.rs  sync_calendar.rs  sync_tasks.rs
crates/axis-application/src/use_cases/config/: get.rs  mod.rs  subscribe.rs  update.rs
crates/axis-application/src/use_cases/continuity/: cancel_reconnect.rs  confirm_pin.rs  connect_to_peer.rs  disconnect.rs  discover_peers.rs  force_local.rs  mod.rs  reject_pin.rs  send_input.rs  set_enabled.rs  set_peer_arrangement.rs  start_sharing.rs  stop_sharing.rs  unpair.rs  update_peer_configs.rs
crates/axis-application/src/use_cases/dnd/: get_status.rs  mod.rs  set_enabled.rs  subscribe.rs
crates/axis-core/: Cargo.toml
crates/axis-core/src/: lib.rs  store.rs
crates/axis-core/src/services/: audio.rs  bluetooth.rs  clock.rs  kdeconnect.rs  network.rs  nightlight.rs  power.rs
crates/axis-infrastructure/: Cargo.toml
crates/axis-infrastructure/src/: lib.rs  utils.rs
crates/axis-infrastructure/src/adapters/: airplane.rs  appearance.rs  backlight.rs  bluetooth.rs  clock.rs  cloud.rs  dnd.rs  google_agenda.rs  google_auth.rs  google_calendar.rs  google_tasks.rs  idle_inhibit.rs  idle_notify.rs  ipc.rs  lock.rs  logging.rs  mod.rs  mpris.rs  network.rs  nightlight.rs  niri_layout.rs  popups.rs  power.rs  pulse.rs  ssh.rs  tray.rs  workspaces.rs
crates/axis-infrastructure/src/mocks/: agenda.rs  airplane.rs  audio.rs  bluetooth.rs  brightness.rs  calendar.rs  clock.rs  continuity.rs  dnd.rs  lock.rs  mod.rs  mpris.rs  network.rs  nightlight.rs  notifications.rs  power.rs  ssh.rs  tasks.rs  tray.rs  workspaces.rs
crates/axis-presentation/: Cargo.toml
crates/axis-presentation/src/: lib.rs  presenter.rs  view.rs
crates/axis-presentation/src/theme/: gtk_service.rs  mod.rs
crates/axis-settings/: Cargo.toml
crates/axis-settings/src/: continuity_proxy.rs  main.rs  page.rs  proxy.rs  style.css
crates/axis-settings/src/pages/: about.rs  appearance.rs  bluetooth.rs  continuity.rs  mod.rs  network.rs  nightlight.rs  services.rs  shortcuts.rs
crates/axis-settings/src/presentation/: accounts.rs  appearance.rs  bluetooth.rs  continuity.rs  idle.rs  mod.rs  navigation.rs  network.rs
crates/axis-settings/src/widgets/: about_page.rs  accounts_page.rs  appearance_page.rs  arrangement_grid.rs  bluetooth_page.rs  callback.rs  continuity_page.rs  idle_page.rs  mod.rs  network_page.rs  peer_detail_page.rs  scan_button.rs  sidebar.rs  window.rs
crates/axis-shell/: Cargo.toml
crates/axis-shell/src/: config.rs  i18n.rs  lib.rs  main.rs  style.css
crates/axis-shell/src/composition/: mod.rs  notifications.rs  presenters.rs  providers.rs  use_cases.rs  wiring.rs
crates/axis-shell/src/presentation/: agenda.rs  appearance.rs  audio.rs  auto_hide.rs  battery.rs  bluetooth.rs  brightness.rs  clock.rs  continuity.rs  launcher.rs  lock.rs  mod.rs  mpris.rs  network.rs  nightlight.rs  notifications.rs  popups.rs  presenter.rs  ssh.rs  toggle.rs  tray.rs  workspaces.rs
crates/axis-shell/src/services/: dbus_host.rs  mod.rs  niri.rs  theme_service.rs  wallpaper_service.rs
crates/axis-shell/src/shell/: dbus.rs  mod.rs
crates/axis-shell/src/utils/: animations.rs  mod.rs  reconcile.rs
crates/axis-shell/src/widgets/: airplane_status.rs  audio.rs  bar.rs  bar_window.rs  bluetooth_status.rs  callback.rs  clock.rs  continuity_capture.rs  continuity_status.rs  dnd_status.rs  drag_overlay.rs  idle_inhibit_status.rs  island.rs  launcher.rs  launcher_popup.rs  lock_screen.rs  mod.rs  mpris_bar.rs  mpris_popup.rs  notification_archive.rs  notification_card.rs  notification_toast.rs  osd.rs  popup_base.rs  quick_settings.rs  ssh_status.rs  status_bar.rs  tray.rs  wallpaper.rs  wifi_status.rs  workspace_dots.rs  workspace_popup.rs
src/: app_context.rs  (+4 more)
(+389 files in other folders)
