[package]
name = "axis"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
futures-util = "0.3.32"
gtk4 = { version = "0.10", features = ["v4_12"] }
gtk4-layer-shell = "0.7.1"
libadwaita = "0.8"
libpulse-binding = "2.30.1"

niri-ipc = "25.11.0"
tokio = { version = "1.50.0", features = ["full", "sync"] }
zbus = { version = "5.14.0", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
async-channel = "2.5.0"
brightness = "0.8"
inotify = "0.11"
log = "0.4"
fern = "0.7"
