[package]
name = "axis"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
futures-util = "0.3.32"
gtk4 = { version = "0.11", features = ["v4_12"] }
gtk4-layer-shell = "0.8"
libadwaita = "0.9"
libpulse-binding = "2.30.1"

niri-ipc = "25.11.0"
tokio = { version = "1.50.0", features = ["full", "sync"] }
zbus = { version = "5.14.0", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
async-channel = "2.5.0"
brightness = "0.8"
inotify = "0.11"
log = "0.4"
fern = "0.7"
gtk4-session-lock = { version = "0.4", features = ["v1_1"] }
pam = { version = "0.8", features = ["client"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
oauth2 = { version = "5.0", default-features = false, features = ["reqwest-blocking"] }
open = "5"
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
