[package]
name = "axis-infrastructure"
version.workspace = true
edition = "2024"

[features]
mocks = []

[dependencies]
axis-domain.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
futures-util.workspace = true
zbus.workspace = true
libpulse-binding.workspace = true
brightness.workspace = true
inotify.workspace = true
chrono.workspace = true
niri-ipc.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
fern.workspace = true
notify.workspace = true
gtk4.workspace = true
gtk4-session-lock.workspace = true
pam.workspace = true
oauth2.workspace = true
reqwest.workspace = true
open.workspace = true
urlencoding = "2"
url = "2"
async-channel.workspace = true
evdev.workspace = true
uuid.workspace = true
rand.workspace = true
wayland-client.workspace = true
wayland-protocols.workspace = true
chacha20poly1305.workspace = true
