[package]
name = "axis-presentation"
edition = "2024"
version.workspace = true

[features]
default = ["gtk"]
gtk = ["dep:gtk4", "dep:libadwaita"]

[dependencies]
axis-application.workspace = true
axis-domain.workspace = true
async-stream.workspace = true
futures-util.workspace = true
gtk4 = { workspace = true, optional = true }
libadwaita = { workspace = true, optional = true }
log.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
