[package]
name = "axis-settings"
version = "0.1.0"
edition = "2024"

[dependencies]
axis-core.workspace = true
gtk4.workspace = true
libadwaita.workspace = true
tokio.workspace = true
zbus.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true

[[bin]]
name = "axis-settings"
path = "src/main.rs"
