[package]
name = "axis-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
axis-domain.workspace = true
axis-application.workspace = true
axis-infrastructure.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
chrono.workspace = true
futures-util.workspace = true
async-trait.workspace = true
gtk4.workspace = true
libadwaita.workspace = true
gtk4-layer-shell.workspace = true
log.workspace = true
async-stream.workspace = true
image.workspace = true
clap.workspace = true
